--- a/app/assets/stylesheets/css/Header.css.scss
+++ b/app/assets/stylesheets/css/Header.css.scss
@@ -36,6 +36,7 @@
   80%,
   100% {
     transform: translateY(0);
+    background-color: orange;
   }
   40% {
     transform: translateY(-30px);
@@ -63,7 +64,7 @@
   -webkit-box-shadow: 0px 0px 10px 1px #000000bf;
   -moz-box-shadow: 0px 0px 10px 1px #000000bf;
   box-shadow: 0px 0px 10px 1px #000000bf;
-  color: #125cad;
+  color: orange;
   margin: 25px auto;
 }
 
