--- a/app/assets/stylesheets/css/NewsView.css
+++ b/app/assets/stylesheets/css/NewsView.css
@@ -120,6 +120,6 @@ h2 {
 }
 .arrowOverlayDown:hover,
 .arrowOverlayUp:hover {
-  transform: scale(1.05);
+  transform: scale(1.1);
   transition: transform 1s;
 }
