--- a/app/assets/stylesheets/css/index.css.scss
+++ b/app/assets/stylesheets/css/index.css.scss
@@ -4,12 +4,10 @@
   padding: 0;
 }
 
-body,
-html {
+body {
   height: 100%;
   background-size: cover;
   background-attachment: fixed;
-  background-color: black;
   background-image: url(asset-path("kaplani.jpg"));
 }
 
